Fix CI spec path

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -23,4 +23,6 @@ jobs:
         run: npm ci
 
       - name: Run Cypress regression tests
-        run: npx cypress run --spec "cypress/e2e/regression/*.cy.js"
+        run: npx cypress run --spec "cypress/e2e/*.cy.js"
+
+
